--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <label for="amountInput">Amount to Stake/Unstake</label>
                     <div class="input-with-button">
                         <input type="number" id="amountInput" placeholder="0.0" min="0" step="0.1">
-                        <button class="max-btn" onclick="setMaxAmount()">
+                        <button class="max-btn" id="maxBtn">
                             <i class="fas fa-arrow-up"></i> MAX
                         </button>
                     </div>
@@ -88,16 +88,16 @@
                 </div>
 
                 <div class="action-buttons">
-                    <button class="btn btn-success" id="approveBtn" onclick="approveTokens()">
+                    <button class="btn btn-success" id="approveBtn">
                         <i class="fas fa-check-circle"></i> Approve
                     </button>
-                    <button class="btn btn-primary" id="stakeBtn" onclick="stakeTokens()">
+                    <button class="btn btn-primary" id="stakeBtn">
                         <i class="fas fa-lock"></i> Stake
                     </button>
-                    <button class="btn btn-danger" id="unstakeBtn" onclick="unstakeTokens()">
+                    <button class="btn btn-danger" id="unstakeBtn">
                         <i class="fas fa-unlock"></i> Unstake
                     </button>
-                    <button class="btn btn-warning" id="claimBtn" onclick="claimRewards()">
+                    <button class="btn btn-warning" id="claimBtn">
                         <i class="fas fa-gift"></i> Claim Rewards
                     </button>
                 </div>
